--- a/getkey.html
+++ b/getkey.html
@@ -70,7 +70,7 @@
             const params = new URLSearchParams(window.location.search);
             const hwid = params.get('hwid');
             const display = document.getElementById('display-key');
-            const API_URL = "https://your-ngrok-link.ngrok-free.app"; // THAY LINK NGROK CỦA BẠN
+            const API_URL = "https://humanistically-unphilanthropic-misael.ngrok-free.dev"; // THAY LINK NGROK CỦA BẠN
         
             if (hwid) {
                 try {
@@ -83,4 +83,5 @@
     </script>
 </body>
 </html>
+
 
