--- a/getkey.html
+++ b/getkey.html
@@ -17,7 +17,7 @@
     </div>
 
     <script>
-        const API_URL = " https://humanistically-unphilanthropic-misael.ngrok-free.dev";
+        const API_URL = "https://humanistically-unphilanthropic-misael.ngrok-free.dev/";
 
        async function getKey() {
             try {
@@ -41,4 +41,5 @@
     </script>
 </body>
 </html>
+
 
